<resources>
    <string name="app_name">ELMAT</string>
    <string name="app_title">Carona Solidária</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_ListaRotinas">Rotinas</string>
    <string name="action_NovaRotina">Nova Rotina</string>
    <string name="action_ListaCaronas">Lista Caronas</string>
    <string name="action_QueroCarona">Quero Carona</string>
    <string name="action_Amigos">Meus Amigos</string>
    <string name="app_id">1453561134949305</string>
    <string name="title_activity_user_svc">ELMAT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_caronas">ELMAT</string>
    <string name="autocomplete_placeholder">Procure o local</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="AmigosTitleColuna">Meus Amigos</string>
    <string name="VerificaCaronasTitleColuna">Minha Carona</string>
    <string name="CaronasTitleColuna">Caronas</string>
    <string name="RotinasTitleColuna">Rotinas</string>
    <string name="AmigosBlockColuna">Ativo</string>

    <string name="strRoutineTitle">Título</string>
    <string name="strRoutineHour">Hora</string>
    <string name="strMon">Seg</string>
    <string name="strTue">Ter</string>
    <string name="strWed">Qua</string>
    <string name="strThu">Qui</string>
    <string name="strFri">Sex</string>
    <string name="strSat">Sab</string>
    <string name="strSun">Dom</string>

    <string name="strAdd">Adicionar</string>
    <string name="strUpdt">Atualizar</string>
</resources>
