<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cc.tcc.elmat_2.MainActivity">
    <item android:id="@+id/action_listaCaronas" android:title="@string/action_ListaCaronas"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_pedeCaronas" android:title="@string/action_QueroCarona"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_mostraAmigos" android:title="@string/action_Amigos"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mostraRotinas" android:title="@string/action_ListaRotinas"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
