<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cc.tcc.elmat_2.AddRoutineActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/action_NovaRotina"
                android:id="@+id/textView5" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="113dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/strRoutineTitle"
                    android:id="@+id/textView6"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/txtRoutineTitle"
                    android:layout_weight="0.7" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/strRoutineHour"
                    android:id="@+id/textView7"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:layout_weight="0.7"
                    android:id="@+id/txtRoutineHour" />
            </TableRow>
            </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:gravity="center">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dip" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strMon"
                    android:text="@string/strMon"
                    android:gravity="center"
                    android:layout_weight="0.15" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strTue"
                    android:text="@string/strTue"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strWed"
                    android:text="@string/strWed"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strThu"
                    android:text="@string/strThu"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strFri"
                    android:text="@string/strFri"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strSat"
                    android:text="@string/strSat"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/strSun"
                    android:text="@string/strSun"
                    android:gravity="center"
                    android:layout_weight="0.15" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dip">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkMon"
                    android:layout_weight="0.15" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkTue"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkWed"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkThu"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkFri"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkSat"
                    android:gravity="center"
                    android:layout_weight="0.14" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/chkSun"
                    android:layout_weight="0.15" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strAdd"
                android:id="@+id/AddRoutineBtn" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
